[package]
name = "moe-gpu-dsp"
version = "0.1.1"
edition = "2021"
authors = ["Sean Morin"]
description = "MoE-routed GPU signal processing framework — batch cuFFT, kernel dispatch, zero-copy pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/architect-minder/moe-gpu-dsp"
documentation = "https://docs.rs/moe-gpu-dsp"
readme = "README.md"
keywords = ["cuda", "dsp", "gpu", "fft", "signal-processing"]
categories = ["science", "multimedia::audio", "hardware-support"]

[features]
default = []
cuda = ["cudarc"]

[dependencies]
cudarc = { version = "0.19", features = ["cuda-version-from-build-system", "cufft"], optional = true }
